# sugar.rs

./: Cargo.toml  README.md  build.rs  code_gen.rs
src/: chain_drop.rs  chain_panic.rs  chain_todo.rs  combin.rs  lib.rs  macro_lit.rs  named_into.rs  once_get.rs  side_effect.rs  tests.rs  tuple_iter.rs  tuple_map.rs  tuple_utils.rs
