[package]
name = "batch_oper"
version = "1.13.0"
authors = ["BatchOperator", "2A5F <u2a5f@outlook.com>"]
edition = "2018"
description = "batch_oper provides some batch operation macro for some operations"
repository = "https://github.com/BatchOperator/BatchOperRust"
license = "MIT"
keywords = ["batch_oper", "macro", "using", "in", "let_chain"]
categories = ["algorithms", "api-bindings", "development-tools", "no-std"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["std", "combin", "named-into", "macro-lit", "side-effect", "re-exports", "chain_panic", "chain_todo", "tuple_iter", "tuple_utils"]
std = []
combin = []
combin-mutual = []
named-into = []
macro-lit = []
re-exports = []
side-effect = []
chain_panic = []
chain_todo = []
tuple_iter = ["code_gen"]
tuple_utils = ["code_gen"]
code_gen = ["syn", "quote", "proc-macro2"]

[build-dependencies]
syn = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }