[package]
name = "batch_oper"
version = "2.0.0"
authors = ["BatchOperator", "2A5F <u2a5f@outlook.com>"]
edition = "2018"
description = "batch_oper provides some batch operation macro for some operations"
repository = "https://github.com/BatchOperator/BatchOperRust"
license = "MIT"
keywords = ["utils", "into", "let_chain", "tuple", "macro"]
categories = ["rust-patterns", "no-std"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuples = { version = "1.3", optional = true }

[features]
default = ["std", "combin", "named-into", "macro-lit", "side-effect", "re-exports", "chain_panic", "chain_todo", "tuples"]
std = []
combin = []
named-into = []
macro-lit = []
re-exports = []
side-effect = []
chain_panic = []
chain_todo = []

[build-dependencies]
