[package]
name = "libsugar"
version = "2.5.0"
authors = ["libsugar", "2A5F <u2a5f@outlook.com>"]
edition = "2018"
description = "libsugar provides syntactic sugar in the form of a library"
repository = "https://github.com/libsugar/sugar.rs"
license = "MIT"
keywords = ["utils", "into", "let_chain", "tuple", "macro"]
categories = ["rust-patterns", "no-std"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuples = { version = "1.4", optional = true }

[features]
default = ["std", "combin", "named-into", "macro-lit", "side-effect", "re-exports", "chain_panic", "chain_todo", "tuples", "once_get", "chain_drop"]
std = []
combin = []
named-into = []
macro-lit = []
re-exports = []
side-effect = []
chain_panic = []
chain_todo = []
once_get = []
chain_drop = []

[build-dependencies]
